Completed the assignment

--- a/The_Bechdel_Test.Rmd
+++ b/The_Bechdel_Test.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Bechdel Test"
 author: "Created by Mine Çetinkaya-Rundel"
-output: html_document
+output: github_document
 ---
 <!--- you might change html_document to github_document if you are working with GitHub--->
 
@@ -22,7 +22,8 @@ We start with loading the packages we'll use.
 
 ```{r load-packages, message=FALSE}
 library(fivethirtyeight)
-library(Tidyverse)
+library(tidyverse)
+library(dplyr)
 ```
 
 The dataset contains information on `r nrow(bechdel)` movies released between `r min(bechdel$year)` and `r max(bechdel$year)`.
@@ -35,9 +36,9 @@ bechdel90_13 <- bechdel %>%
 
 > What is the `%>%` inside the code? What does it do? How did you determine your answer?   
 
+The pipe operator allows you to pass the result of one function/argument to the other one in sequence.
 
-
-There are `___` such movies.
+There are `r nrow(bechdel90_13)` such movies.
 
 The financial variables we'll focus on are the following:
 
@@ -54,13 +55,15 @@ Let's take a look at how median budget and gross vary by whether the movie passe
 ```{r message = FALSE}
 bechdel90_13 %>%
   group_by(binary) %>%
-  summarise(med_budget = median(budget_2031),
+  summarise(med_budget = median(budget_2013),
             med_domgross = median(domgross_2013, na.rm = TRUE),
             med_intgross = median(intgross_2013, na.rm = TRUE))
 ```
 
 > What does `summarise()` do? How did you look it up?  
 
+
+summarise() is typically used on grouped data created by group_by(). The output will have one row for each group. I found the answer because I searched it up. 
 
 
 
@@ -75,7 +78,7 @@ This information is stored in the `clean_test` variable, which takes on the foll
 
 ```{r message = FALSE}
 bechdel90_13 %>%
-  group_by(___) %>%  #fill in the gap with the right variable
+  group_by(clean_test) %>%  #fill in the gap with the right variable
   summarise(med_budget = median(budget_2013),
             med_domgross = median(domgross_2013, na.rm = TRUE),
             med_intgross = median(intgross_2013, na.rm = TRUE))
@@ -94,24 +97,23 @@ Let's see which movies have the highest return on investment.
 ```{r}
 bechdel90_13 %>%
   arrange(desc(roi)) %>% 
-  select(title, roi, year
+  select(title, roi, year)
 ```
 
 > What does `select()` do? How did you look it up?  
 
-
-
+Select() keeps only the variable that you mention. I used the help tab.
 
 
 Below is a visualization of the return on investment by test result, however it's difficult to see the distributions due to a few extreme observations.
 
 ```{r warning = FALSE}
 ggplot(data = bechdel90_13, 
-       mapping = aes(x = clean_test, y = roi color = binary)) +
+       mapping = aes(x = clean_test, y = roi, color = binary)) +
   geom_boxplot() +
   labs(title = "Return on investment vs. Bechdel test result",
        x = "Detailed Bechdel result",
-       y = "___",
+       y = "Investment Return",
        color = "Binary Bechdel result")
 ```
 
@@ -123,13 +125,13 @@ bechdel90_13 %>%
   select(title, budget_2013, domgross_2013, year)
 ```
 
-Zooming in on the movies with `roi < ___` provides a better view of how the medians across the categories compare:
+Zooming in on the movies with `roi < 200` provides a better view of how the medians across the categories compare:
 
 ```{r warning = FALSE}
 ggplot(data = bechdel90_13, mapping = aes(x = clean_test, y = roi, color = binary)) +
   geom_boxplot() +
   labs(title = "Return on investment vs. Bechdel test result",
-       subtitle = "___", # Something about zooming in to a certain level
+       subtitle = "Zooming in to a certain level", # Something about zooming in to a certain level
        x = "Detailed Bechdel result",
        y = "Return on investment",
        color = "Binary Bechdel result") +
@@ -139,5 +141,6 @@ ggplot(data = bechdel90_13, mapping = aes(x = clean_test, y = roi, color = binar
 
 > What did you learn from the data analysis included in the document?  
 
+The return on investment is scattered all over the place. All of of the people mostly fail, instead of passing. 
 
 
